--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@heroicons/react": "^2.2.0",
     "@tailwindcss/vite": "^4.0.6",
     "flowbite-react": "^0.11.5",
+    "framer-motion": "^12.27.0",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
